--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>[Name] [Surname] - Recruitment task</title>
+    <title>Łukasz Marciszewski - Recruitment task</title>
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
+    <h1>Welcome</h1>
 
 </body>
